--- a/css/style.css
+++ b/css/style.css
@@ -125,13 +125,26 @@ a {
 
 a:hover {
   color: #f6ac4d;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .wrapper {
   margin: 0 auto;
   text-align: center;
+}
+
+.animation {
+  opacity: 0;
+  visibility: hidden;
+  transition: 1s;
+  transform: translateY(30px);
+}
+
+/*アニメーション要素までスクロールした時のスタイル*/
+.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
 }
 
 h2 {
@@ -150,41 +163,28 @@ header {
 }
 
 header .wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 header .wrapper h1 {
-  font-size: 2.5rem;
+  font-size: 2.4rem;
   font-weight: normal;
   font-family: 'Times New Roman', Times, serif;
   margin: 20px 0;
-  padding-left: 10px;
 }
 
 header .wrapper nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 header .wrapper nav ul li {
   width: 50%;
   text-align: center;
   border: 1px solid #d9d9d9;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 header .wrapper nav ul li a {
@@ -202,32 +202,33 @@ header .wrapper nav ul li a {
 
 #about .about .main-visual img {
   width: 100%;
+  min-width: 280px;
   height: auto;
   margin-bottom: 30px;
 }
 
 #about .about .profile-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-  padding: 0 20px;
+  flex-direction: column;
+  text-align: left;
 }
 
 #about .about .profile-text h3 {
   font-size: 1.4rem;
-  font-weight: 100;
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+#about .about .profile-text .career {
+  line-height: 1.8;
+  font-size: 0.7rem;
   margin-bottom: 20px;
 }
 
-#about .about .profile-text p {
+#about .about .profile-text .possible-businness {
   line-height: 1.8;
   font-size: 0.7rem;
-  text-align: left;
 }
 
 /* skill */
@@ -237,15 +238,9 @@ header .wrapper nav ul li a {
 }
 
 #skill .skills {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 #skill .skills .skill {
@@ -269,7 +264,7 @@ header .wrapper nav ul li a {
   font-size: 0.7rem;
   line-height: 1.8;
   padding: 0 20px;
-  width: 300px;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -280,24 +275,19 @@ header .wrapper nav ul li a {
 }
 
 #works ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 #works ul li {
   margin: 0 auto 40px;
-  width: 300px;
   text-align: center;
 }
 
 #works ul li a img {
   width: 100%;
-  height: 250px;
+  height: 100%;
+  max-height: 300px;
   border: 1px solid black;
 }
 
@@ -365,26 +355,22 @@ footer {
 /* レスポンシブCSS */
 @media screen and (min-width: 760px) {
   .wrapper {
-    max-width: 920px;
+    max-width: 1400px;
     margin: 0 auto;
   }
   /* header */
+  header {
+    max-width: 1400px;
+    margin: 0 auto 50px;
+  }
   header .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-top: 40px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 5%;
   }
   header .wrapper nav ul {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    flex-wrap: nowrap;
     margin: 20px 10px;
   }
   header .wrapper nav ul li {
@@ -392,25 +378,17 @@ footer {
     margin-left: 50px;
   }
   header .wrapper nav ul li a {
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 0;
     border-bottom: 1px solid #f6ac4d;
   }
   /* about */
   .about {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    flex-direction: row;
+    box-sizing: border-box;
     padding: 0 3%;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   .about .main-visual {
     width: 50%;
@@ -425,15 +403,9 @@ footer {
   }
   /* skill */
   #skill .skills {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-around;
   }
   #skill .skills .skill {
     width: 30%;
@@ -446,16 +418,10 @@ footer {
     margin: 0 auto 60px;
   }
   #works ul {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    box-sizing: border-box;
+    flex-wrap: wrap;
   }
   #works ul li {
     width: 30%;
