--- a/css/style.scss
+++ b/css/style.scss
@@ -137,6 +137,19 @@ a:hover {
   text-align: center;
 }
 
+.animation{
+	opacity : 0;
+	visibility: hidden;
+	transition: 1s;
+	transform: translateY(30px);
+}
+/*アニメーション要素までスクロールした時のスタイル*/
+.active{
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(0);
+}
+
 h2 {
   font-size: 2rem;
   text-align: center;
@@ -156,11 +169,10 @@ header {
     flex-direction: column;
     
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.4rem;
       font-weight: normal;
       font-family:'Times New Roman', Times, serif;
       margin: 20px 0;
-      padding-left: 10px;
     }
 
     nav ul {
@@ -196,6 +208,7 @@ header {
 
     .main-visual img {
       width: 100%;
+      min-width: 280px;
       height: auto;
       margin-bottom: 30px;
     }
@@ -203,19 +216,24 @@ header {
     .profile-text {
       display: flex;
       flex-direction: column;
-      text-align: center;
-      padding: 0 20px;
+      text-align: left;
 
       h3 {
         font-size: 1.4rem;
-        font-weight: 100;
+        font-weight: bold;
         margin-bottom: 20px;
+        font-family:'Times New Roman', Times, serif;
       }
-      
-      p {
+
+      .career {
         line-height: 1.8;
         font-size: 0.7rem;
-        text-align: left;
+        margin-bottom: 20px;
+      }
+
+      .possible-businness {
+        line-height: 1.8;
+        font-size: 0.7rem;
       }
     }
   }
@@ -253,12 +271,13 @@ header {
         font-size: 0.7rem;
         line-height: 1.8;
         padding: 0 20px;
-        width: 300px;
+        width: 80%;
         margin: 0 auto;
       }
     }
   }
 }
+
 
 
 
@@ -273,14 +292,14 @@ header {
 
     li {
       margin: 0 auto 40px;
-      width: 300px;
       text-align: center;
 
       a {
 
         img {
           width: 100%;
-          height: 250px;
+          height: 100%;
+          max-height: 300px;
           border: 1px solid black;
         }
 
@@ -291,10 +310,6 @@ header {
     }
   }
 }
-
-
-
-
 
 /* contact */
 #contact {
@@ -360,18 +375,22 @@ footer {
 @media screen and (min-width: 760px) {
 
   .wrapper {
-    max-width: 920px;
+    max-width: 1400px;
     margin: 0 auto;
   }
 
   /* header */
   header {
+    max-width: 1400px;
+    margin: 0 auto 50px;
 
     .wrapper {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      margin-top: 40px;
+      margin: 0 5%;
+
+
 
       nav ul {
          flex-wrap: nowrap;
@@ -382,7 +401,7 @@ footer {
             margin-left: 50px;
 
             a {
-              margin-top: 30px;
+              margin-top: 20px;
               padding: 0;
               border-bottom: 1px solid #f6ac4d;
             }
