--- a/css/style.scss
+++ b/css/style.scss
@@ -416,7 +416,6 @@ footer {
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    padding: 0 3%;
     align-items: center;
 
     .main-visual {
@@ -452,7 +451,7 @@ footer {
 
   /* works */
   #works {
-    margin: 0 auto 60px;
+    margin: 0 5% 60px;
 
     ul {
       flex-direction: row;
