--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,11 @@ header .wrapper h1 {
   margin: 20px 0;
 }
 
+header .wrapper .sns {
+  margin-bottom: 10px;
+  font-size: 1.4rem;
+}
+
 header .wrapper nav ul {
   display: flex;
   flex-direction: row;
@@ -368,6 +373,13 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     margin: 0 3%;
+  }
+  header .wrapper h1 {
+    margin: 40px 0;
+  }
+  header .wrapper .sns {
+    padding: 20px 20px 0 0;
+    text-align: right;
   }
   header .wrapper nav ul {
     flex-wrap: nowrap;
