--- a/css/style.scss
+++ b/css/style.scss
@@ -175,6 +175,11 @@ header {
       margin: 20px 0;
     }
 
+    .sns {
+      margin-bottom: 10px;
+      font-size: 1.4rem;
+    }
+
     nav ul {
       display: flex;
       flex-direction: row;
@@ -389,6 +394,15 @@ footer {
       flex-direction: row;
       justify-content: space-between;
       margin: 0 3%;
+
+      h1 {
+        margin: 40px 0;
+      }
+
+      .sns {
+        padding: 20px 20px 0 0;
+        text-align: right;
+      }
 
 
 
